--- a/views/error.pug
+++ b/views/error.pug
@@ -12,3 +12,6 @@ block content
     h2 Error Status:
     p= error.status
     pre #{error.stack}
+  div(id="footer")
+    p This page is an open source project hosted on Github at:
+    a(href="https://www.github.com/neilbalch/RPi-Computer-Power") github.com/neilbalch/RPi-Computer-Power
