--- a/views/index.pug
+++ b/views/index.pug
@@ -46,3 +46,6 @@ block content
       form(action="/hash.js",method="post")
         button Hash
         input(name="params",type="password",placeholder="Password")
+  div(id="footer")
+    p This page is an open source project hosted on Github at:
+    a(href="https://www.github.com/neilbalch/RPi-Computer-Power") github.com/neilbalch/RPi-Computer-Power
