--- a/views/programError.pug
+++ b/views/programError.pug
@@ -10,3 +10,6 @@ block content
     div(id="message")
       h2 Error:
       p= error
+  div(id="footer")
+    p This page is an open source project hosted on Github at:
+    a(href="https://www.github.com/neilbalch/RPi-Computer-Power") github.com/neilbalch/RPi-Computer-Power
