--- a/public/stylesheets/programOutput.css
+++ b/public/stylesheets/programOutput.css
@@ -1,4 +1,8 @@
-body { padding: 10px 10px; background: orange url(../images/background.jpg) no-repeat fixed center center; background-size: cover; }
+body {
+  background: orange url(../images/background.jpg) no-repeat fixed center center;
+  background-size: cover; 
+  margin: 0px;
+}
 input {
   width: 250px;
   border: 2px dashed #D1C7AC;
@@ -31,4 +35,17 @@ p { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
 #copyButton, form { display: inline-block; }
 #copyButton { margin-left: 20px; }
 #copyTarget { font-size: 18px; }
-#btns { margin: auto; width: 250px; }
+
+#footer {
+  background: linear-gradient(rgba(255,0,0,0), rgba(244,192,34,1) 30%);
+  width: 100%;
+  height: 1.5em;
+  padding: 5px 10px;
+  position: fixed;
+  bottom: 0px;
+}
+#footer p, #footer a {
+  float: left;
+  padding-top: 5px;
+  padding-right: 10px;
+}
