Refactor css into common layout.css file

--- a/views/programOutput.pug
+++ b/views/programOutput.pug
@@ -1,6 +1,7 @@
 html
   head
     title CMS: Program Output
+    link(rel='stylesheet', href='/stylesheets/layout.css')
     link(rel='stylesheet', href='/stylesheets/programOutput.css')
   body
     div(id="content-wrapper")
