--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -1,39 +1,3 @@
-body {
-  background: orange url(../images/background.jpg) no-repeat fixed center center;
-  background-size: cover; 
-  margin: 0px;
-}
 form { margin: auto; width: 50px; }
-button:hover { color: black; background: lawngreen; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
-button {
-  background-color: green;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 3px 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font: 16px 'Ubuntu', sans-serif;
-  -webkit-transition-duration: 0.33s; /* Safari */
-  transition-duration: 0.25s;
-}
-p { margin: 0px 0px 0px 0px; font: 14px 'Ubuntu', sans-serif; display: inline-block; }
-pre { margin: 5px 0px 0px 0px; font: 14px 'Ubuntu', sans-serif; }
-h1 { margin: 10px 0px 10px 0px; font: bold 40px 'Ubuntu', sans-serif; text-align: center; }
-h2 { margin: 10px 0px 0px 0px; font: 26px 'Ubuntu', sans-serif; display: inline-block; padding: 0px 5px 0px 0px; }
-#content-wrapper { width: 1000px; margin: auto; padding: 1em 5px; background: #37cac5; border-radius: 25px; }
-
-#footer { 
-  background: linear-gradient(rgba(255,0,0,0), rgba(244,192,34,1) 30%);
-  width: 100%; 
-  height: 1.5em; 
-  padding: 5px 10px;
-  position: fixed;
-  bottom: 0px;
-}
-#footer p, #footer a {
-  float: left;
-  padding-top: 5px;
-  padding-right: 10px;
-}
+p { display: inline-block; }
+#content-wrapper { width: 1000px; }
