--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,32 +1,4 @@
-body {
-  margin: 0px;
-  background: orange url(../images/background.jpg) no-repeat fixed center center; 
-  background-size: cover;
-}
-input {
-  width: 225px;
-  border: 2px dashed #D1C7AC;
-  border-left: 4px solid #3366FF;
-  font: 16px 'Ubuntu', sans-serif;
-}
-button:hover { color: black; background: lawngreen; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
-button {
-  background-color: green;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 3px 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font: 16px 'Ubuntu', sans-serif;
-  -webkit-transition-duration: 0.33s; /* Safari */
-  transition-duration: 0.25s;
-}
-b { font: bold 24px 'Ubuntu', sans-serif; }
-a { color: blue; }
-p, a { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
-#content-wrapper { width: 950px; margin: auto; padding-bottom: 1em; background: #37cac5; border-radius: 25px; }
+#content-wrapper { width: 950px; }
 #indexHeader { text-align: center; margin: 0px 0px 0.25em 0px; font: 60px 'Happy Monkey', cursive; }
 #indexHeader i { font: italic 24px 'Ubuntu', sans-serif; }
 #actionBtns { margin: auto; margin-bottom: 1.5em; width: 500px; }
@@ -50,17 +22,3 @@ p, a { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
 #options { width: 320px; margin: auto; margin-top: 1.5em; padding: 5px; }
 #hash { width: 320px; margin: auto; margin-top: 0.5em; padding: 5px; }
 #options input, #hash input { float: right; }
-
-#footer { 
-  background: linear-gradient(rgba(255,0,0,0), rgba(244,192,34,1) 30%);
-  width: 100%; 
-  height: 1.5em; 
-  padding: 5px 10px;
-  position: fixed;
-  bottom: 0px;
-}
-#footer p, #footer a {
-  float: left;
-  padding-top: 5px;
-  padding-right: 10px;
-}
