--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,32 +1,9 @@
-body { padding: 10px 10px; background: orange url(../images/background.jpg) no-repeat fixed center center; background-size: cover; }
-input {
-  width: 275px;
-  border: 2px dashed #D1C7AC;
-  border-left: 4px solid #3366FF;
-  font: 20px 'Ubuntu', sans-serif;
-}
-button:hover { color: black; background: lawngreen; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
-button {
-  background-color: green;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 3px 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font: 16px 'Ubuntu', sans-serif;
-  -webkit-transition-duration: 0.33s; /* Safari */
-  transition-duration: 0.25s;
-}
-b { font: bold 24px 'Ubuntu', sans-serif; }
-a { color: #00B7FF; }
-p { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
+input { width: 275px; }
 form {
   margin: auto;
   width: 310px;
 }
-#content-wrapper { width: 600px; margin: auto; margin-top: 1em; padding: 10px 0px; background: #37cac5; border-radius: 25px; }
+#content-wrapper { width: 600px; }
 #form-wrapper {
   position: relative;
 }
