--- a/public/stylesheets/programOutput.css
+++ b/public/stylesheets/programOutput.css
@@ -1,32 +1,4 @@
-body {
-  background: orange url(../images/background.jpg) no-repeat fixed center center;
-  background-size: cover; 
-  margin: 0px;
-}
-input {
-  width: 250px;
-  border: 2px dashed #D1C7AC;
-  border-left: 4px solid #3366FF;
-  font: 20px 'Ubuntu', sans-serif;
-}
-button:hover { color: black; background: lawngreen; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); }
-button {
-  background-color: green;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 3px 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font: 16px 'Ubuntu', sans-serif;
-  -webkit-transition-duration: 0.33s; /* Safari */
-  transition-duration: 0.25s;
-}
-b { padding-top: 1em; font: bold 30px 'Ubuntu', sans-serif; }
-a { color: #00B7FF; }
-p { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
-#content-wrapper { width: 610px; margin: auto; margin-top: 1em; padding: 10px; background: #37cac5; border-radius: 25px; }
+#content-wrapper { width: 610px; }
 #message {
   text-align: center;
   margin: auto;
@@ -35,17 +7,3 @@ p { margin: 0px 0px 0px 0px; font: 16px 'Ubuntu', sans-serif; }
 #copyButton, form { display: inline-block; }
 #copyButton { margin-left: 20px; }
 #copyTarget { font-size: 18px; }
-
-#footer {
-  background: linear-gradient(rgba(255,0,0,0), rgba(244,192,34,1) 30%);
-  width: 100%;
-  height: 1.5em;
-  padding: 5px 10px;
-  position: fixed;
-  bottom: 0px;
-}
-#footer p, #footer a {
-  float: left;
-  padding-top: 5px;
-  padding-right: 10px;
-}
