--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,6 @@ html
     title CMS
     //- Jquery 3.3.1
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+    link(rel='stylesheet', href='/stylesheets/layout.css')
   body
     block content
