Add viewport control for bettter mobile support

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     //- Jquery 3.3.1
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     link(rel='stylesheet', href='/stylesheets/layout.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     block content
