--- a/views/programOutput.pug
+++ b/views/programOutput.pug
@@ -3,6 +3,7 @@ html
     title CMS: Program Output
     link(rel='stylesheet', href='/stylesheets/layout.css')
     link(rel='stylesheet', href='/stylesheets/programOutput.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
   body
     div(id="content-wrapper")
       script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
