--- a/public/stylesheets/error.css
+++ b/public/stylesheets/error.css
@@ -1,3 +1,3 @@
-form { margin: auto; width: 50px; }
+form { margin: auto; width: fit-content; }
 p { display: inline-block; }
-#content-wrapper { width: 1000px; }
+#content-wrapper { width: fit-content; }
